test/unit/components/dialogue/scripts/invalid/header-blank.dscript
How can I be angry if I don't have my header?
